# skeleton

./: .dockerignore  .env.example  .env.test  .gitignore  LICENSE  MIGRATION_NOTES.md  Makefile  README.md  alembic.ini  api_requirements.html  docker-compose.override.yml  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_drop_customers.py  0003_crm_module.py  0004_user_roles.py  0005_drop_roles_name_check.py  0006_drop_crm_tables.py  0007_role_code_and_description.py  0008_user_image.py  20260704_0544_add_phone_to_user.py  20260704_1017_added_enquiry_and_other_tables.py  20260704_1218_added_is_deleted_in_enquiry.py  20260711_1542_added_client_rep_columns_and_visit_.py  20260712_1246_added_enquiry_audit_log_table.py  20260712_1321_added_is_signature_column_in_user_table.py  20260714_1550_added_file_name_column_in_attachments_.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/v1/: _enquiry_response.py  _response.py  _user_response.py  auth.py  company.py  enquiry.py  health.py  project_type.py  role.py  site_visit.py  uploads.py  user.py
app/core/: config.py  exceptions.py  logging.py  rate_limit.py
app/db/: base.py  redis.py  session.py
app/models/: __init__.py  attachment.py  audit_log.py  base.py  client.py  company.py  contact.py  enquiry.py  enums.py  project.py  project_type.py  quotation.py  quotation_version.py  role.py  site_visit.py  staff_profile.py  user.py  user_role.py
app/schemas/: audit_log.py  auth.py  common.py  company.py  enquiry.py  project_type.py  role.py  site_visit.py  user.py
app/schemas/crm/: __init__.py  _common.py  company.py  contact.py  enquiry.py  lost_enquiry.py  project.py  quotation.py  quotation_version.py  role.py  site_visit.py  staff_profile.py
app/services/: auth.py  company.py  enquiry.py  project_type.py  role.py  site_visit.py  user.py
app/services/crm/: _common.py  company.py  contact.py  enquiry.py  lost_enquiry.py  project.py  quotation.py  quotation_line_item.py  role.py  site_visit.py  staff_profile.py
app/storage/: __init__.py  s3.py  service.py
docker/: app.Dockerfile
docker/postgres/: init.sql
docs/: crm-erd.md
scripts/: seed.py  up-local.sh  wait-for.sh
src/app/: asgi.py  main.py
src/app/api/: deps.py  router.py
src/app/core/: __init__.py  config.py  exceptions.py  rate_limit.py  security.py
src/app/db/: __init__.py  redis.py  session.py
src/app/models/: __init__.py  base.py  company.py  contact.py  customer.py  lost_enquiry.py  quotation.py  quotation_line_item.py  quotation_version.py  user.py  (+2 more)
tests/: conftest.py  test_response.py  test_roles.py  test_users.py
tests/integration/: __init__.py  test_auth.py  test_customers.py  test_health.py
tests/unit/: test_rate_limit.py  test_security.py
(+47 files in other folders)
