[project]
name = "kalisia-backend"
version = "0.1.0"
description = "Production-ready FastAPI backend with JWT auth, PostgreSQL, and Redis"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kalisia" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "aioboto3>=13.0.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "httpx>=0.27.2",
    "orjson>=3.10.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "types-passlib>=1.7.7.20240819",
]

[project.scripts]
kalisia = "app.asgi:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC", "S", "TCH", "PIE", "PT",
]
ignore = [
    "S101",  # assert in tests
    "B008",  # FastAPI uses function calls in defaults
    "E501",  # line length is enforced by formatter
]
unfixable = ["B", "F401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N", "B011"]
"alembic/**" = ["E", "F", "I"]
# FastAPI evaluates path-param types (e.g. uuid.UUID) and dependency
# aliases (Annotated[Type, Depends(...)]) at request time, so the
# imports they reference must be available at runtime — not
# TYPE_CHECKING-only.
"app/api/v1/**" = ["TC001", "TC002", "TC003"]
"app/schemas/**" = ["TC003"]
"app/models/**" = ["TC002", "TC003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "."
ignore_missing_imports = false
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["passlib.*", "structlog.*", "aioboto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: integration tests requiring docker services",
    "unit: pure unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__main__.py"]
